@@ -8,9 +8,14 @@
 
 static const char* FILE_NAME = "Net/SSLeay/OPENSSL.c";
 
-int32_t SPVM__Net__SSLeay__OPENSSL__foo(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Net__SSLeay__OPENSSL_add_ssl_algorithms(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  int32_t status = OpenSSL_add_ssl_algorithms();
+  
+  stack[0].ival = status;
   
   return 0;
 }
-
 
