@@ -3,4 +3,7 @@
 
 class Net::SSLeay::OPENSSL {
   
+  # Class Method
+  native static method add_ssl_algorithms : int ();
+  
 }
