@@ -29,6 +29,8 @@
     * Add Net::SSLeay#get_cipher method.
     * Add Net::SSLeay#get_peer_certificate method.
     * Add Net::SSLeay#library_init method.
+    * Add Net::SSLeay::OPENSSL class.
+    * Add Net::SSLeay::OPENSSL#add_ssl_algorithms method.
     
 0.009 2024-11-08
   [Requirement Changes]
